[package]
name = "drum"
version = "0.4.1"
authors = ["Jaye Marshall <marshall.jaye@gmail.com>"]
description = "A bitcask inspired storage api for rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jmars/drum.git"

[dependencies]
bincode = "0.4.*"
serde = "0.6.*"
serde_macros = "0.6.*"

[dev-dependencies]
tempfile = "*"
bufstream = { git = "https://github.com/jmars/bufstream.git" }