[package]
name = "drum"
version = "0.4.4"
authors = ["Jaye Marshall <marshall.jaye@gmail.com>"]
description = "A bitcask inspired storage api for rust."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jmars/drum.git"

[dependencies]
bincode = "0.4.*"
serde = "0.6.*"
serde_macros = "0.6.*"

[dev-dependencies]
tempfile = "2.0.*"